--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logi.j.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="logi.j.png" type="image/svg+xml">
 
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- 
     - google font link
@@ -79,7 +79,7 @@
           </li>
 
           <li>
-            <a href="./assets/images/resume1.pdf" class="btn btn-primary">Download CV</a>
+            <a href="resume1.pdf" class="btn btn-primary">Download CV</a>
           </li>
 
         </ul>
@@ -104,7 +104,7 @@
 
           <div class="hero-banner">
 
-            <img src="./assets/images/hero.jpg" width="500" height="864" loading="lazy" alt="jitendra's Photo"
+            <img src="hero.jpg" width="500" height="864" loading="lazy" alt="jitendra's Photo"
               class="img-cover">
 
             <div class="elem elem-1">
@@ -114,7 +114,7 @@
             </div>
 
             <div class="elem elem-2">
-              <p class="elem-title">15+</p>
+              <p class="elem-title">30+</p>
 
               <p class="elem-text">Projects Completed</p>
             </div>
@@ -123,7 +123,7 @@
               <ion-icon name="trophy"></ion-icon>
             </div>
 
-            <img src="./assets/images/logo.web.jpg" width="169" height="172" alt="I'm developer from Bhopal"
+            <img src="logo.web.jpg" width="169" height="172" alt="I'm developer from Bhopal"
               class="rotate-img">
 
           </div>
@@ -163,10 +163,10 @@
 
           <figure class="about-banner">
 
-            <img src="./assets/images/about-banner.jpg" width="800" height="652" loading="lazy" alt="Ethan's Photo"
+            <img src="about-banner.jpg" width="800" height="652" loading="lazy" alt="Ethan's Photo"
               class="img-cover">
 
-            <img src="./assets/images/absolute-image.jpg" width="800" height="717" loading="lazy" alt="Ethan's Photo"
+            <img src="absolute-image.jpg" width="800" height="717" loading="lazy" alt="Ethan's Photo"
               class="abs-img">
 
             <div class="abs-icon abs-icon-1">
@@ -204,7 +204,7 @@
               omnis
             </p>
 
-            <a href="#portfolio" class="btn btn-primary blue">View Portfolio</a>
+            <a href="#portfolio" class="btn btn-primary blue">View Projects</a>
 
           </div>
 
@@ -227,13 +227,13 @@
           <h2 class="h2 section-title">My Amazing Works</h2>
 
           <p class="section-text" >
-            A web-based application that allows users to plan and manage their travel itineraries, book tour packages, and manage bookings online. Admin can manage destinations, packages, and user queries. 
+            
           </p>
 
           <ul class="portfolio-list">
 
             <li>
-              <a href="https://dawargame.netlify.app/" class="portfolio-card" style="background-image: url('./assets/images/game-zone.png')">
+              <a href="https://dawargame.netlify.app/" class="portfolio-card" style="background-image: url('game-zone.png')">
                 <div class="card-content">
 
                   <p class="card-subtitle">Game-Zone</p>
@@ -251,7 +251,7 @@
             </li>
 
             <li>
-              <a href="https://dawarmusic.netlify.app/" class="portfolio-card" style="background-image: url('./assets/images/music.png')">
+              <a href="https://dawarmusic.netlify.app/" class="portfolio-card" style="background-image: url('music.png')">
                 <div class="card-content">
 
                   <p class="card-subtitle">Music Dashboard</p>
@@ -269,7 +269,7 @@
             </li>
 
             <li>
-              <a href="https://dawarrobot.netlify.app/" class="portfolio-card" style="background-image: url('./assets/images/robot.png')">
+              <a href="https://dawarrobot.netlify.app/" class="portfolio-card" style="background-image: url('robot.png')">
                 <div class="card-content">
 
                   <p class="card-subtitle">Personal Assistant</p>
@@ -287,7 +287,7 @@
             </li>
 
             <li>
-              <a href="https://dawarecom.netlify.app/" class="portfolio-card" style="background-image: url('./assets/images/e-comm.jpeg')">
+              <a href="https://dawarecom.netlify.app/" class="portfolio-card" style="background-image: url('e-comm.jpeg')">
                 <div class="card-content">
 
                   <p class="card-subtitle">E-Com Website</p>
@@ -306,7 +306,7 @@
 
             
             <li>
-              <a href="https://dawarpdf.netlify.app/" class="portfolio-card" style="background-image: url('./assets/images/pdf.png')">
+              <a href="https://dawarpdf.netlify.app/" class="portfolio-card" style="background-image: url('pdf.png')">
                 <div class="card-content">
 
                   <p class="card-subtitle">Super Converter Tool </p>
@@ -324,7 +324,7 @@
             </li>
 
             <li>
-              <a href="https://dawarjob.netlify.app/" class="portfolio-card" style="background-image: url('./assets/images/job.png')">
+              <a href="https://dawarjob.netlify.app/" class="portfolio-card" style="background-image: url('job.png')">
                 <div class="card-content">
 
                   <p class="card-subtitle">Job-Portal </p>
@@ -583,7 +583,7 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/blog-1.jpg" width="1181" height="843" loading="lazy"
+                    <img src="blog-1.jpg" width="1181" height="843" loading="lazy"
                       alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
                   </a>
                 </figure>
@@ -602,7 +602,7 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/blog-2.jpg" width="1181" height="843" loading="lazy"
+                    <img src="blog-2.jpg" width="1181" height="843" loading="lazy"
                       alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
                   </a>
                 </figure>
@@ -621,7 +621,7 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/blog-3.jpg" width="1181" height="843" loading="lazy"
+                    <img src="blog-3.jpg" width="1181" height="843" loading="lazy"
                       alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
                   </a>
                 </figure>
@@ -688,7 +688,7 @@
   <!-- 
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+  <script src="script.js"></script>
 
   <!-- 
     - ionicon link
